Fix white space!!!

--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,13 @@
     --header: 20vh;
 }
 
+body, html {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+    box-sizing: border-box;
+}
 
 body {
     margin: 0;
@@ -38,7 +45,7 @@ header h1 {
 
 /* Containers */
 .main-container {
-    width: 100%;
+    width: 100vw;
     background-color: var(--clr-white);
     border-top-left-radius: 7.5vw;
     border-top-right-radius: 7.5vw;
@@ -93,6 +100,7 @@ header h1 {
     left: 13%;
     bottom: 4vh;
     opacity: 0.6;
+    box-sizing: border-box;
 }
 
 /* Btn */
